--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <title>HTML</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="estilo.css">
+  <link rel="stylesheet" href="estilos.css">
 </head>
 
 <body>
-  <p>David Attenborough</p>
+  <h2>David Attenborough</h2>
+  <img src="img/david.jpg" alt="175" width="375">
 </body>
 </html>
