--- a/index.html
+++ b/index.html
@@ -86,7 +86,40 @@
       </details>
     </li>
   </ol>
+  <img src="img/serie.jpg" alt="75" width="325">
+  <h2>Premios recibidos</h2>
+  <p>Durante toda su carrera, David Attemborough ha recibido un gran número de premios, de los cuales los más recientes son:</p>
+  <ol>
+    <li>Primetime Creative Arts Emmy award for Outstanding narrator en 2020,2019 y 2018.</li>
+    <li>Goodreads Choice Award en la Categoría Ciencia y Tecnología en 2020.</li>
+    <li>Mejor Narración/Voice-Over en un Cortometraje en 2020.</li>
+    <li>Premio Indira Gandhi en 2019.</li>
+    <li>David Attenborough national television award - impact award en 2018</li>
+    <li>Premio de Televisión de la Academia Británica al Mejor Programa Especializado Basado en Hechos en 2017,2014,2011</li>
+    <li>David Attenborough peabody personal award en 2015</li>
+  </ol>
+  <img src="img/premio.jpg" alt="75" width="225">
+  <table>
+    <table border="1">    
+      <caption><strong>Cualidades de David</strong></caption
+    <tr>
+      <th>1</th>
+      <td>Éxito</td>
+      <th>3</th>
+      <td>Líder</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>Visionario</td>
+      <th>4</th>
+      <td>Innovador</td>
+    </tr>
+  </table>
+  
  
+  <center><video src="img/video.mp4"autoplay muted loop controls width="640" height="480> </video></center>
+
+
   
 </body>
 </html>
