--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
     <li>David Attenborough peabody personal award en 2015</li>
   </ol>
   <img src="img/premio.jpg" alt="75" width="225">
-  <table>
-    <table border="1">    
-      <caption><strong>Cualidades de David</strong></caption
+  <table border="5">    
+    
+      <caption><strong>Cualidades de David</strong></caption>
     <tr>
       <th>1</th>
       <td>Éxito</td>
