--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h2>David Attenborough</h2>
   <img src="img/david.jpg" alt="175" width="375">
   <h3>¿Quién es?</h3>
-  <p>David Frederick Attenborough ​​ es un científico británico, uno de los divulgadores naturalistas más conocidos de la televisión. Considerado uno de los pioneros en documentales sobre la naturaleza, ha escrito y presentado ocho series, e hizo posible que se vea prácticamente cualquier aspecto de la vida en la Tierra. </p>
+  <p><span class="david">David Frederick Attenborough</span> ​​ es un científico británico, uno de los divulgadores naturalistas más conocidos de la televisión. Considerado uno de los pioneros en documentales sobre la naturaleza, ha escrito y presentado ocho series, e hizo posible que se vea prácticamente cualquier aspecto de la vida en la Tierra. </p>
   <h3>Documentales más vistos</h3>
   <ol>
     <li>Historias de David Attenborough.
@@ -99,7 +99,7 @@
     <li>David Attenborough peabody personal award en 2015</li>
   </ol>
   <img src="img/premio.jpg" alt="75" width="225">
-  <table border="5">    
+  <table>    
     
       <caption><strong>Cualidades de David</strong></caption>
     <tr>
@@ -115,9 +115,11 @@
       <td>Innovador</td>
     </tr>
   </table>
+
+  <pstrong>Enlace a <a href="https://miguelibarra05.github.io/1EVAL_HTMLyCSS_TICO2_miguelibarra05/">página de los deberes</a></p>
   
  
-  <center><video src="img/video.mp4" autoplay muted loop controls width="640" height="480> </video></center>
+  <video src="img/video.mp4" autoplay muted loop controls width="640" height="480> </video>
 
 
   
