--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
     </li>
   </ol>
   <img src="img/serie.jpg" alt="75" width="325">
+  <h4>Un documental que me parece muy interesante es sobre cómo se desarrollaron los primeros animales en nuestro planeta. </h4>
+  <p>Enlace al <a href="https://www.rtve.es/play/videos/vida-primigenia/conquista/6280614/">documental sobre los desarrollos de los animales en sus inicios</a>.</p>
   <h2>Premios recibidos</h2>
   <p>Durante toda su carrera, David Attemborough ha recibido un gran número de premios, de los cuales los más recientes son:</p>
   <ol>
@@ -99,29 +101,26 @@
     <li>David Attenborough peabody personal award en 2015</li>
   </ol>
   <img src="img/premio.jpg" alt="75" width="225">
-  <table>    
-    
-      <caption><strong>Cualidades de David</strong></caption>
-    <tr>
+  <table class="cualidades">    
+     <caption><strong>Cualidades de David</strong></caption>
+     <tr>
       <th>1</th>
       <td>Éxito</td>
       <th>3</th>
       <td>Líder</td>
-    </tr>
-    <tr>
+     </tr>
+     <tr>
       <th>2</th>
       <td>Visionario</td>
       <th>4</th>
       <td>Innovador</td>
-    </tr>
+     </tr>
   </table>
 
   <pstrong>Enlace a <a href="https://miguelibarra05.github.io/1EVAL_HTMLyCSS_TICO2_miguelibarra05/">página de los deberes</a></p>
   
  
-  <video src="img/video.mp4" autoplay muted loop controls width="640" height="480> </video>
+  <video src="img/video.mp4" autoplay muted loop controls width="590" height="400></video>  
 
-
-  
 </body>
 </html>
