--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <h2>David Attenborough</h2>
   <img src="img/david.jpg" alt="175" width="375">
   <h3>¿Quién es?</h3>
-  <p><span class="david">David Frederick Attenborough</span> ​​ es un científico británico, uno de los divulgadores naturalistas más conocidos de la televisión. Considerado uno de los pioneros en documentales sobre la naturaleza, ha escrito y presentado ocho series, e hizo posible que se vea prácticamente cualquier aspecto de la vida en la Tierra. </p>
+  <p><strong>David Frederick Attenborough</strong> ​​ es un científico británico, uno de los divulgadores naturalistas más conocidos de la televisión. Considerado uno de los pioneros en documentales sobre la naturaleza, ha escrito y presentado ocho series, e hizo posible que se vea prácticamente cualquier aspecto de la vida en la Tierra.<acronym title=" También ocupó puestos en la gerencia de la BBC, donde ejerció como gerente de distribución de recursos humanos para la BBC2 y también como director de programación de la BBC en los años 1960 y 1970. Es hermano menor del fallecido actor y director Lord Richard Attenborough.">Más información.</acronym> </p>
+  <h3>¿Dónde nació?</h3>
+  <p>David Attemborough nació en Isleworth, Reino Unido</p>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39759.376279168886!2d-0.375284427957098!3d51.477229843570896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760d035069c029%3A0xc4d06062643f04c!2sIsleworth%2C%20Reino%20Unido!5e0!3m2!1ses!2ses!4v1668692568342!5m2!1ses!2ses" width="350" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
   <h3>Documentales más vistos</h3>
   <ol>
     <li>Historias de David Attenborough.
@@ -101,7 +105,7 @@
     <li>David Attenborough peabody personal award en 2015</li>
   </ol>
   <img src="img/premio.jpg" alt="75" width="225">
-  <table class="cualidades">    
+  <table border="6">    
      <caption><strong>Cualidades de David</strong></caption>
      <tr>
       <th>1</th>
