--- a/index.html
+++ b/index.html
@@ -121,10 +121,8 @@
      </tr>
   </table>
 
-  <pstrong>Enlace a <a href="https://miguelibarra05.github.io/1EVAL_HTMLyCSS_TICO2_miguelibarra05/">página de los deberes</a></p>
-  
- 
-  <video src="img/video.mp4" autoplay muted loop controls width="590" height="400></video>  
+  <p><strong>Enlace a <a href="https://miguelibarra05.github.io/1EVAL_HTMLyCSS_TICO2_miguelibarra05/">página de los deberes</a></strong></p>
 
 </body>
 </html>
+<video src="img/video.mp4" autoplay muted loop controls width="590" height="400></video>
