--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
       <td>Innovador</td>
      </tr>
   </table>
+  <video width="590" height="400" controls>
+    <source src="img/Video/video.mp4" autoplay muted loop controls type="Video/mp4">
+  
+  </video>
 
   <p><strong>Enlace a <a href="https://miguelibarra05.github.io/1EVAL_HTMLyCSS_TICO2_miguelibarra05/">página de los deberes</a></strong></p>
 
