--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <h1>David Attenborough</h1>
   <img src="img/david.jpg" alt="375" width="475">
-  <h2>¿Quién es?</h2>
-  <p><strong>David Frederick Attenborough</strong> ​​ es un científico británico, uno de los divulgadores naturalistas más conocidos de la televisión. Considerado uno de los pioneros en documentales sobre la naturaleza, ha escrito y presentado ocho series, e hizo posible que se vea prácticamente cualquier aspecto de la vida en la Tierra.<acronym title=" También ocupó puestos en la gerencia de la BBC, donde ejerció como gerente de distribución de recursos humanos para la BBC2 y también como director de programación de la BBC en los años 1960 y 1970. Es hermano menor del fallecido actor y director Lord Richard Attenborough.">Más información.</acronym> </p>
+  <h2 class="oo">¿Quién es?</h2>
+  <p class="yo"><strong>David Frederick Attenborough</strong> ​​ es un científico británico, uno de los divulgadores naturalistas más conocidos de la televisión. Considerado uno de los pioneros en documentales sobre la naturaleza, ha escrito y presentado ocho series, e hizo posible que se vea prácticamente cualquier aspecto de la vida en la Tierra.<acronym title=" También ocupó puestos en la gerencia de la BBC, donde ejerció como gerente de distribución de recursos humanos para la BBC2 y también como director de programación de la BBC en los años 1960 y 1970. Es hermano menor del fallecido actor y director Lord Richard Attenborough.">Más información.</acronym> </p>
   <h2>¿Dónde nació?</h2>
   <p><span class="David">David Attemborough</span>  nació en Isleworth, Reino Unido</p>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39759.376279168886!2d-0.375284427957098!3d51.477229843570896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760d035069c029%3A0xc4d06062643f04c!2sIsleworth%2C%20Reino%20Unido!5e0!3m2!1ses!2ses!4v1668692568342!5m2!1ses!2ses" width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
@@ -91,9 +91,9 @@
     </li>
   </ol>
   <img src="img/serie.jpg" alt="75" width="325">
-  <h4>Un documental que me parece muy interesante es sobre cómo se desarrollaron los primeros animales en nuestro planeta. </h4>
+  <h4 class="pp">Un documental que me parece muy interesante es sobre cómo se desarrollaron los primeros animales en nuestro planeta. </h4>
   <p>Enlace al <a href="https://www.rtve.es/play/videos/vida-primigenia/conquista/6280614/">documental sobre los desarrollos de los animales en sus inicios</a>.</p>
-  <h2>Premios recibidos</h2>
+  <h2 class="ii">Premios recibidos</h2>
   <p>Durante toda su carrera, David Attemborough ha recibido un gran número de premios, de los cuales los más recientes son:</p>
   <ol>
     <li>Primetime Creative Arts Emmy award for Outstanding narrator en 2020,2019 y 2018.</li>
@@ -105,20 +105,20 @@
     <li>David Attenborough peabody personal award en 2015</li>
   </ol>
   <img src="img/premio.jpg" alt="175" width="225">
-  <table class="cualidades">  
-     <caption><strong>Cualidades de David</strong></caption>
-     <tr>
-      <th>1</th>
-      <td>Éxito</td>
+  <table>  
+    <caption><strong>Cualidades de David</strong></caption>
+    <tr>
+     <th>1</th>
+     <td>Éxito</td>
       <th>3</th>
       <td>Líder</td>
-     </tr>
-     <tr>
+    </tr>
+    <tr>
       <th>2</th>
       <td>Visionario</td>
       <th>4</th>
       <td>Innovador</td>
-     </tr>
+    </tr>
   </table>
   <video width="750" height="500" controls>
     <source src="img/Video/video.mp4" autoplay muted loop controls type="Video/mp4">
