--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   
   </video>
 
-  <p><strong>Enlace a <a href="https://miguelibarra05.github.io/1EVAL_HTMLyCSS_TICO2_miguelibarra05/">página de los deberes</a></strong></p>
+  <p class="juju"><strong>Enlace a <a href="https://miguelibarra05.github.io/1EVAL_HTMLyCSS_TICO2_miguelibarra05/">página de los deberes</a></strong></p>
   
 </body>
 </html>
