--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <p><span class="David">David Attemborough</span>  nació en Isleworth, Reino Unido</p>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39759.376279168886!2d-0.375284427957098!3d51.477229843570896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760d035069c029%3A0xc4d06062643f04c!2sIsleworth%2C%20Reino%20Unido!5e0!3m2!1ses!2ses!4v1668692568342!5m2!1ses!2ses" width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
   </iframe>
-  <h2>Documentales más vistos</h2>
+  <h2>Documentales más vistos.</h2>
   <ol>
     <li>Historias de David Attenborough.
       <details>
