--- a/index.html
+++ b/index.html
@@ -22,70 +22,70 @@
       <details>
         <ul>
           <li>En esta miniserie de tres capítulos Attenborough analiza en cada capítulo los cambios de los que ha visto en primera persona en el desarrollo de su trabajo en los tres campos que ha cubierto: La tecnología en la producción de documentales, la ciencia en la comprensión de las especies y el planeta y la conservación del medio ambiente.
-            Me parece muy interesante por que el mismo nos explica como ha vivido los cambios además de tener imágenes y explicar como eran y se hacían las cosas hace más de 50 años.</li>
+            Me parece muy interesante por que el mismo nos explica como ha vivido los cambios además de tener imágenes y explicar como eran y se hacían las cosas hace más de 50 años.<p>Enlace a los <a href="https://www.documaniatv.com/documentales/historias-de-david-attenborough/">documentales</a>.</p></li>
         </ul>
       </details>
     </li>
     <li>Planeta helado.
       <details>
         <ul>
-          <li>Attenborough nos lleva tanto al ártico como a la antártida en planeta helado revelándonos la belleza tanto del paisaje como de los animales que habitan en las zonas más frías de la tierra. Es una de la grandes series de sir David que creó controversia en los Estados Unidos pues el capítulo que muestra los efectos del cambio climático, sobre el hielo frágil, fue vetado por 10 cadenas de televisión por considerarlo polémico, como siempre los amigos de USA cuando no les gusta de lo que se habla prefieren eliminarlo no sea que la gente puede tomar conciencia. Es sin duda una extraordinaria serie que todo amante de la naturaleza no se puede perder.</li>
+          <li>Attenborough nos lleva tanto al ártico como a la antártida en planeta helado revelándonos la belleza tanto del paisaje como de los animales que habitan en las zonas más frías de la tierra. Es una de la grandes series de sir David que creó controversia en los Estados Unidos pues el capítulo que muestra los efectos del cambio climático, sobre el hielo frágil, fue vetado por 10 cadenas de televisión por considerarlo polémico, como siempre los amigos de USA cuando no les gusta de lo que se habla prefieren eliminarlo no sea que la gente puede tomar conciencia. Es sin duda una extraordinaria serie que todo amante de la naturaleza no se puede perder. <p>Enlace a los <a href="https://www.documaniatv.com/documentales/planeta-helado/">documentales</a>.</p></li>
         </ul>
       </details>
     </li>
     <li>Life.
       <details>
         <ul>
-          <li>Esta épica serie de diez capítulos fue tal vez la empresa más ambiciosa en esta lista: cubre toda la vida en el planeta y utilizando las últimas cámaras de alta velocidad (a 8.000 fotogramas por segundo) para capturar momentos nunca vistos anteriormente en película. Está lleno de momentos impresionantes y cuenta con algunas de las escenas más espectaculares y memorables grabadas en documentales de naturaleza.</li>
+          <li>Esta épica serie de diez capítulos fue tal vez la empresa más ambiciosa en esta lista: cubre toda la vida en el planeta y utilizando las últimas cámaras de alta velocidad (a 8.000 fotogramas por segundo) para capturar momentos nunca vistos anteriormente en película. Está lleno de momentos impresionantes y cuenta con algunas de las escenas más espectaculares y memorables grabadas en documentales de naturaleza.<p>Enlace a los <a href="https://www.documaniatv.com/documentales/life/">documentales</a>.</p></li>
         </ul>
       </details>
     </li>
     <li>Attenborough y el huevo gigante.
       <details>
         <ul>
-          <li>En este especial ve Sir David trazar la historia de un gigante, un huevo fosilizado que había estado guardando en su sótano durante 50 años, después de recogerlo durante el rodaje en Madagascar. El huevo de más de 30 centímetros es de la extinta ave elefante de Madagascar, una popular fuente de alimento para los isleños hace mil años; un huevo podría alimentar a una familia entera. Sir David nos adentra en el mundo de esta extraña y gigante ave y nos desvela las posibles causas de su extinción.</li>
+          <li>En este especial ve Sir David trazar la historia de un gigante, un huevo fosilizado que había estado guardando en su sótano durante 50 años, después de recogerlo durante el rodaje en Madagascar. El huevo de más de 30 centímetros es de la extinta ave elefante de Madagascar, una popular fuente de alimento para los isleños hace mil años; un huevo podría alimentar a una familia entera. Sir David nos adentra en el mundo de esta extraña y gigante ave y nos desvela las posibles causas de su extinción.<p>Enlace al <a href="https://www.documaniatv.com/naturaleza/attenborough-y-el-huevo-gigante-video_6cb195d19.html">documental</a>.</p></li>
         </ul>
       </details>
     </li>
     <li>Planeta tierra.
       <details>
         <ul>
-          <li>La grabación de esta serie tomó cinco años y fue es programa de naturaleza de la BBC más caro que jamás se ha hecho. Pero en realiadad, valió la pena, traza la amplitud y variedad de los paisajes de la Tierra, desde los volcanes de Etiopía a las cuevas más profundas del mundo, desde el desierto de Gobi de Mongolia a las selvas tropicales de Nueva Guinea. Si no la has visto tómate un día entero y disfruta de todos y cada uno de los magníficos documentales de esta serie.</li>
+          <li>La grabación de esta serie tomó cinco años y fue es programa de naturaleza de la BBC más caro que jamás se ha hecho. Pero en realiadad, valió la pena, traza la amplitud y variedad de los paisajes de la Tierra, desde los volcanes de Etiopía a las cuevas más profundas del mundo, desde el desierto de Gobi de Mongolia a las selvas tropicales de Nueva Guinea. Si no la has visto tómate un día entero y disfruta de todos y cada uno de los magníficos documentales de esta serie.<p>Enlace a los <a href="https://www.documaniatv.com/documentales/planeta-tierra/">documentales</a>.</p></li>
         </ul>
       </details>
     </li>
     <li>Mamíferos.
       <details>
         <ul>
-          <li>Esto es, la serie en la que Sir David dice "boo" a un perezoso, una de las escenas más recordadas en este tipo de documentales. Incluso después de dedicar cinco episodios de serie la vida en la Tierra (1979) a los mamíferos, esta serie analiza los mamíferos en sus 10 capítulos. Seamos realistas: los mamíferos son los animales que más gustan y cuando Attenborough se ve en la cara de un orangután de Borneo, vemos una pequeña parte de nuestro pasado.</li>
+          <li>Esto es, la serie en la que Sir David dice "boo" a un perezoso, una de las escenas más recordadas en este tipo de documentales. Incluso después de dedicar cinco episodios de serie la vida en la Tierra (1979) a los mamíferos, esta serie analiza los mamíferos en sus 10 capítulos. Seamos realistas: los mamíferos son los animales que más gustan y cuando Attenborough se ve en la cara de un orangután de Borneo, vemos una pequeña parte de nuestro pasado.<p>Enlace a los <a href="https://www.documaniatv.com/documentales/mamiferos/">documentales</a>.</p></li>
         </ul>
       </details>
     </li>
     <li>Planeta azul.
       <details>
         <ul>
-          <li>La naturaleza nunca nos parecerá más extraña que lo hace en el planeta azul. Está lleno de extrañas criaturas ondulantes de las profundidades. Pero hay mucho que admirar en esta serie de 10 capítulos, desde el caminar cómico del pez mano a la belleza sobrenatural del calamar australiano que cambian de color durante su apareamiento nos adentramos en la fauna submarina para ver criaturas únicas y fascinantes que la mayoría de nosotros no conocemos.</li>
+          <li>La naturaleza nunca nos parecerá más extraña que lo hace en el planeta azul. Está lleno de extrañas criaturas ondulantes de las profundidades. Pero hay mucho que admirar en esta serie de 10 capítulos, desde el caminar cómico del pez mano a la belleza sobrenatural del calamar australiano que cambian de color durante su apareamiento nos adentramos en la fauna submarina para ver criaturas únicas y fascinantes que la mayoría de nosotros no conocemos.<p>Enlace a los <a href="https://www.documaniatv.com/documentales/planeta-azul/">documentales</a>.</p></li>
         </ul>
       </details>
     </li>
     <li>La vida privada de las plantas.
       <details>
         <ul>
-          <li>Entre la variada fauna de estos documentales, es fácil olvidar que la flora pueden ser igual de emocionante. 21 años después de su realización, la vida privada de las plantas todavía se alinea junto a los mejores trabajos de Attenborough. Con su revolucionario fotografía de lapso de tiempo, filmada desde la perspectiva de las propias plantas, la serie mostró vides arrastrándose como seres vivos, que, por supuesto, que lo son pero en esta serie podemos realmente apreciarlo. Una excelente serie no sólo para los amantes de las plantas ya que nos ofrece una visión única de las plantas y de su vida como seres vivos que son.</li>
+          <li>Entre la variada fauna de estos documentales, es fácil olvidar que la flora pueden ser igual de emocionante. 21 años después de su realización, la vida privada de las plantas todavía se alinea junto a los mejores trabajos de Attenborough. Con su revolucionario fotografía de lapso de tiempo, filmada desde la perspectiva de las propias plantas, la serie mostró vides arrastrándose como seres vivos, que, por supuesto, que lo son pero en esta serie podemos realmente apreciarlo. Una excelente serie no sólo para los amantes de las plantas ya que nos ofrece una visión única de las plantas y de su vida como seres vivos que son.<p>Enlace a los <a href="https://www.documaniatv.com/documentales/la-vida-privada-de-las-plantas/">documentales</a>.</p></li>
         </ul>
       </details>
     </li>
     <li>La vida de las aves.
       <details>
         <ul>
-          <li>En un documental sobre la naturaleza de primer orden no sólo son importantes los efectos visuales. Porque la vida de las aves, el sonido fue primero: El equipo de grabación estaba decididos a no copiar un solo sonido, todas los cantes de las aves que escuche fueron grabados en el momento exacto en que se ve el ave crearlo. La serie es una hermosa síntesis perfecta, de imagen y sonido sobre unos animales sobre los que hay tantos documentales y que en esta serie se analizan en profundidad.</li>
+          <li>En un documental sobre la naturaleza de primer orden no sólo son importantes los efectos visuales. Porque la vida de las aves, el sonido fue primero: El equipo de grabación estaba decididos a no copiar un solo sonido, todas los cantes de las aves que escuche fueron grabados en el momento exacto en que se ve el ave crearlo. La serie es una hermosa síntesis perfecta, de imagen y sonido sobre unos animales sobre los que hay tantos documentales y que en esta serie se analizan en profundidad.<p>Enlace a los <a href="https://www.documaniatv.com/documentales/la-vida-de-las-aves/">documentales</a>.</p></li>
         </ul>
       </details>
     </li>
     <li>La vida a sangre fría.
       <details>
         <ul>
-          <li>Sir David nos adentra en el fascinante mundo de los reptiles y anfibios estudiando tanto su evolución como sus hábitos de comportamiento en la naturaleza. Es una serie imperdible para todos aquellos aficionados a los animales de sangre fría, animales que la mayoría de las personas no aprecian y temen pero que tienen una belleza extraordinaria además de cumplir una labor esencial en la naturaleza.</li>
+          <li>Sir David nos adentra en el fascinante mundo de los reptiles y anfibios estudiando tanto su evolución como sus hábitos de comportamiento en la naturaleza. Es una serie imperdible para todos aquellos aficionados a los animales de sangre fría, animales que la mayoría de las personas no aprecian y temen pero que tienen una belleza extraordinaria además de cumplir una labor esencial en la naturaleza.<p>Enlace a los <a href="https://www.documaniatv.com/documentales/la-vida-a-sangre-fria/">documentales</a>.</p></li>
         </ul>
       </details>
     </li>
