--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body>
   <h1>David Attenborough</h1>
-  <img src="img/david.jpg" alt="375" width="475">
+  <div style="text-align:center ;">
+    <img src="img/david.jpg" alt="375" width="520">
+  </div>
   <h2 class="oo">¿Quién es?</h2>
   <p class="yo"><strong>David Frederick Attenborough</strong> ​​ es un científico británico, uno de los divulgadores naturalistas más conocidos de la televisión. Considerado uno de los pioneros en documentales sobre la naturaleza, ha escrito y presentado ocho series, e hizo posible que se vea prácticamente cualquier aspecto de la vida en la Tierra.<acronym title=" También ocupó puestos en la gerencia de la BBC, donde ejerció como gerente de distribución de recursos humanos para la BBC2 y también como director de programación de la BBC en los años 1960 y 1970. Es hermano menor del fallecido actor y director Lord Richard Attenborough.">Más información.</acronym> </p>
   <h2>¿Dónde nació?</h2>
