--- a/index.html
+++ b/index.html
@@ -121,6 +121,18 @@
       <th>4</th>
       <td>Innovador</td>
     </tr>
+    <tr>
+      <th>5</th>
+      <td>Aventurero</td>
+      <th>6</th>
+      <td>Sacrificado</td>
+    </tr>
+    <tr>
+      <th>7</th>
+      <td>Curioso</td>
+      <th>8</th>
+      <td>Valiente</td>
+    </tr>
   </table>
   <video width="850" height="600" controls>
     <source src="img/Video/video.mp4" autoplay muted loop controls type="Video/mp4">
