--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <li>David Attenborough peabody personal award en 2015</li>
   </ol>
   <img src="img/premio.jpg" alt="175" width="225">
-  <table>  
+  <table class="jo">  
     <caption><strong>Cualidades de David</strong></caption>
     <tr>
      <th>1</th>
@@ -138,6 +138,33 @@
     <source src="img/Video/video.mp4" autoplay muted loop controls type="Video/mp4">
   
   </video>
+  <table class="ji">  
+    <caption><strong>Aficiones de David</strong></caption>
+    <tr>
+     <th>1</th>
+     <td>Coleccionador de fosiles</td>
+      <th>3</th>
+      <td>Graduado en Ciencias Naturales</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>Servicio militar en la marina</td>
+      <th>4</th>
+      <td>Coleccionador de minerales</td>
+    </tr>
+    <tr>
+      <th>5</th>
+      <td>Aventurero</td>
+      <th>6</th>
+      <td>Sacrificado</td>
+    </tr>
+    <tr>
+      <th>7</th>
+      <td>Curioso</td>
+      <th>8</th>
+      <td>Valiente</td>
+    </tr>
+  </table>
 
   <p class="juju"><strong>Visita la <a href="https://miguelibarra05.github.io/1EVAL_HTMLyCSS_TICO2_miguelibarra05/">página de deberes</a></strong></p>
   
