--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <li>David Attenborough peabody personal award en 2015</li>
   </ol>
   <img src="img/premio.jpg" alt="175" width="225">
-  <table class="jo">  
+  <table class="jojijo">  
     <caption><strong>Cualidades de David</strong></caption>
     <tr>
      <th>1</th>
